src/test/resources/expected/test-bool-4.kore.golden
Parse error: Error in module 'BOOL' -> alias 'falseBool' declaration (../src/test/resources//test-bool-4.kore 4:11) -> \dv (../src/test/resources//test-bool-4.kore 4:61) -> Verifying builtin sort 'BOOL.Bool' -> While parsing domain value: <string literal>:1:1:
  |
1 | untrue
  | ^^^^^
unexpected "untru"
expecting "false" or "true"
